fix(permit): fix bottom buttons size on ios

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -265,6 +265,9 @@ super-tabs-toolbar > ion-toolbar.toolbar .tab-buttons-container .tab-buttons sup
     min-height: calc(44px + 20px);
     min-height: calc(44px + constant(safe-area-inset-top));
     min-height: calc(44px + env(safe-area-inset-top));
+    height: calc(44px + 20px);
+    height: calc(44px + constant(safe-area-inset-top));
+    height: calc(44px + env(safe-area-inset-top));
 
     ion-segment,
     ion-title {
