--- a/src/pages/permit-detail/permit-detail.scss
+++ b/src/pages/permit-detail/permit-detail.scss
@@ -7,8 +7,10 @@ page-permit-detail {
       & > .bar-buttons {
         display: flex;
         width: 100%;
+        height: 100%;
         margin: 0;
         .bar-button {
+          height: 100%;
           border-radius: 0;
           flex-grow: 1;
           padding: 8px 16px;
